# RecoveryTBot2

./: .replit  ENHANCED_CSV_MIGRATION_SUMMARY.md  INSTALL_WINDOWS.md  OPENAI_MIGRATION_SUMMARY.md  PERPLEXITY_NEWS_MIGRATION_SUMMARY.md  PERPLEXITY_SIMPLIFICATION_SUMMARY.md  README.md  analyze_avafin_structure.py  bot_watchdog.py  check_company_data.py  cleanup_plan.md  company_perplexity.xlsx  config.txt.example  diagnose_news_issue.py  fetch_sample_page.py  improved_document_scraper.py  install.bat  install_no_git.bat  main.py  pyproject.toml  replit.md  replit.nix  run.py  service_manager.py  simple_install.py  start_bot.py  test_bot_integration.py  test_cache_functionality.py  test_company_loading.py  test_company_name_display.py  test_company_page_url.py  test_country_enhanced_search.py  test_country_whitelisting.py  test_csv_news_with_larger_company.py  test_csv_perplexity_news.py  test_date_extraction.py  test_date_filtering.py  test_document_message_format.py  test_document_refresh.py  test_empty_results.py  (+17 more)
.streamlit/: config.toml
attached_assets/: Pasted-2025-01-27-21-08-05-30-5f867c90-User-Traceback-most-recent-call-last-2025-01-27-21-08-05-30--1738010695166.txt  Pasted-2025-01-31-17-39-38-66-d3b49d54-User-home-runner-workspace-run-py-62-DeprecationWarning-connec-1738341657219.txt  Pasted-2025-03-07-17-38-36-13-2f226e10-User-2025-03-07-17-38-36-13-2f226e10-U-1741365574372.txt  Pasted-2025-03-21-17-46-08-99-b0c019cc-User-2025-03-21-16-46-08-994-ERROR-Error-cleaning-up-lock-fil-1742577425655.txt  Pasted-2025-05-30-06-09-14-969-httpx-INFO-HTTP-Request-POST-https-api-telegram-org-bot7368080976-A-1748587348061.txt  Pasted-2025-06-06-12-13-06-744-httpx-INFO-HTTP-Request-POST-https-api-telegram-org-botAAHMyYs3-hxW-1749204924431.txt  add_companyname.py  campaigns.json  company_pages.csv  news.txt  (+26 more)
(+52 files in other folders)
